--- a/while 循环.html
+++ b/while 循环.html
@@ -1,3 +1,10 @@
+<!--
+ * @Description: In User Settings Edit
+ * @Author: your name
+ * @Date: 2019-08-11 18:10:46
+ * @LastEditTime: 2019-08-11 18:13:16
+ * @LastEditors: Please set LastEditors
+ -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,21 +17,16 @@
 
 <body>
     <script>
-        //    计算1-100的数字和；
-        // var i = 1;
-        // var sum = 0;
-        // while (i <= 100){
-        //     sum += i;
-        //     i++;
-        // }
-        // console.log(sum,i);
+        计算1 - 100 的数字和；
+        var i = 1;
+        var sum = 0;
+        while (i <= 100) {
+            sum += i;
+            i++;
+        }
+        console.log(sum, i);
 
 
-        // var i = 0;
-        // while (i < 10) {
-        //     console.log("你好"+(i+1));
-        //     i++;
-        // }
 
 
 
@@ -38,8 +40,8 @@
             i++;
         }
         console.log(sum);
-     </script>
-        
+    </script>
+
 </body>
 
 </html>
