--- a/while 循环.html
+++ b/while 循环.html
@@ -1,3 +1,10 @@
+<!--
+ * @Description: In User Settings Edit
+ * @Author: your name
+ * @Date: 2019-05-23 21:53:04
+ * @LastEditTime: 2019-08-11 18:31:22
+ * @LastEditors: Please set LastEditors
+ -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,21 +32,8 @@
         //     console.log("你好"+(i+1));
         //     i++;
         // }
+    </script>
 
-
-
-        // 计算1-100之内所有偶数和
-        var i = 1;
-        var sum = 0;
-        while (i <= 100) {
-            if (i % 2 == 0) {
-                sum += i;
-            }
-            i++;
-        }
-        console.log(sum);
-     </script>
-        
 </body>
 
 </html>
